2006-01-28  Rodrigo Moya <rodrigo@novell.com>

	Fixes part of #327749

	* gnome-default-applications-properties.glade:
	* gnome-da-capplet.c (web_combo_changed_cb, mail_combo_changed_cb,
	terminal_combo_changed_cb, web_browser_update_combo_box,
	mail_reader_update_combo_box, terminal_update_combo_box): don't set
	entries' sensitivity, just disable input on them.

2006-01-28  Luca Cavalli <loopback@slackit.org>

	* gnome-da-capplet.c: (web_combo_changed_cb),
	(mail_combo_changed_cb), (terminal_combo_changed_cb),
	(web_browser_update_combo_box), (mail_reader_update_combo_box),
	(terminal_update_combo_box), (web_gconf_changed_cb),
	(mail_gconf_changed_cb), (term_gconf_changed_cb), (show_dialog):
	update custom command entries also when predefined application is
	selected. Closes bug #327749.

2006-01-17  Luca Cavalli  <loopback@slackit.org>

	* gnome-default-applications.xml.in: fixed Thunderbird command
	line parameter. Closes bug #326808.

2006-01-17  Luca Cavalli  <loopback@slackit.org>

	* gnome-da-xml.c: (gnome_da_xml_get_string): load translated XML
	application description, if available. Closes bug #327221.

2006-01-16  Rodrigo Moya <rodrigo@novell.com>

	* gnome-da-xml.c (gnome_da_xml_load_list): just read the file
	from the $datadir we installed it.

	* Makefile.am: -DDATADIR.

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fixed the dist

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-da-capplet.c: (show_dialog): fixes some errors with the path

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-da-capplet.c: (show_dialog): use the correct .glade

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix gladedir use

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix a name

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am:
	* default-applications-properties.glade:
	* gnome-da-capplet.c, gnome-da-capplet.h:
	* gnome-da-item.c, gnome-da-item.h: