@@ -24,14 +24,14 @@
       <netscape-remote>false</netscape-remote>
     </web-browser>
     <web-browser>
-      <_name>Epiphany</_name>
+      <_name>Epiphany Web Browser</_name>
       <executable>epiphany</executable>
       <command>epiphany %s</command>
       <icon-name>web-browser</icon-name>
       <run-in-terminal>false</run-in-terminal>
       <netscape-remote>true</netscape-remote>
-      <tab-command>epiphany -n %s</tab-command>
-      <win-command>epiphany -w %s</win-command>
+      <tab-command>epiphany --new-tab %s</tab-command>
+      <win-command>epiphany --new-window %s</win-command>
     </web-browser>
     <web-browser>
       <_name>Galeon</_name>
