@@ -1,3 +1,10 @@
+2006-01-28  chpe <chpe@gnome.org>
+
+	Fixes #327220
+
+	* gnome-default-applications.xml.in: use "Epiphany Web Browser",
+	like in the .desktop file and use long options for Epiphany.
+
 2006-01-28  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes part of #327749
